--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <title>Die With a Smile - Bruno Mars</title>
 </head>
 <body>
-    <!-- Header -->
     <header>
         <div class="title-container">
             <h1>Die With a Smile</h1>
@@ -17,14 +16,12 @@
         </div>
     </header>
 
-    <!-- Main Section -->
     <main>
-        <!-- Album Cover -->
         <section class="album-cover">
+            <h2>Album Cover</h2>
             <img src="images/brunomars.jpeg" alt="Album Cover">
         </section>
 
-        <!-- Lyrics -->
         <section class="lyrics">
             <h3>Lyrics</h3>
             <p>(Ooh, ooh)<br>
@@ -66,7 +63,6 @@
             I'd wanna be next to you</p>
         </section>
 
-        <!-- Music Video -->
         <section class="video-link">
             <h3>Watch the Music Video</h3>
             <a href="https://www.youtube.com/watch?v=kPa7bsKwL-c" target="_blank">Watch on YouTube</a>
