--- a/index.html
+++ b/index.html
@@ -24,43 +24,45 @@
 
         <section class="lyrics">
             <h3>Lyrics</h3>
-            <p>(Ooh, ooh)<br>
-            I, I just woke up from a dream<br>
-            Where you and I had to say goodbye<br>
-            And I don't know what it all means<br>
-            But since I survived, I realized<br>
-            Wherever you go, that's where I'll follow<br>
-            Nobody's promised tomorrow<br>
-            So I'ma love you every night like it's the last night<br>
-            Like it's the last night<br>
-            If the world was ending, I'd wanna be next to you<br>
-            If the party was over and our time on Earth was through<br>
-            I'd wanna hold you just for a while and die with a smile<br>
-            If the world was ending, I'd wanna be next to you<br>
-            (Ooh, ooh)<br>
-            Oh, lost, lost in the words that we scream<br>
-            I don't even wanna do this anymore<br>
-            'Cause you already know what you mean to me<br>
-            And our love's the only war worth fighting for<br>
-            Wherever you go, that's where I'll follow<br>
-            Nobody's promised tomorrow<br>
-            So I'ma love you every night like it's the last night<br>
-            Like it's the last night<br>
-            If the world was ending, I'd wanna be next to you<br>
-            If the party was over and our time on Earth was through<br>
-            I'd wanna hold you just for a while and die with a smile<br>
-            If the world was ending, I'd wanna be next to you<br>
-            Right next to you<br>
-            Next to you<br>
-            Right next to you<br>
-            Oh-oh, oh<br>
-            If the world was ending, I'd wanna be next to you<br>
-            If the party was over and our time on Earth was through<br>
-            I'd wanna hold you just for a while and die with a smile<br>
-            If the world was ending, I'd wanna be next to you<br>
-            If the world was ending, I'd wanna be next to you<br>
-            (Ooh, ooh)<br>
-            I'd wanna be next to you</p>
+            <p>
+                <span class="red">(Ooh, ooh)</span><br>
+                <span class="blue">I, I just woke up from a dream</span><br>
+                <span class="red">Where you and I had to say goodbye</span><br>
+                <span class="blue">And I don't know what it all means</span><br>
+                <span class="red">But since I survived, I realized</span><br>
+                <span class="blue">Wherever you go, that's where I'll follow</span><br>
+                <span class="red">Nobody's promised tomorrow</span><br>
+                <span class="blue">So I'ma love you every night like it's the last night</span><br>
+                <span class="red">Like it's the last night</span><br>
+                <span class="blue">If the world was ending, I'd wanna be next to you</span><br>
+                <span class="red">If the party was over and our time on Earth was through</span><br>
+                <span class="blue">I'd wanna hold you just for a while and die with a smile</span><br>
+                <span class="red">If the world was ending, I'd wanna be next to you</span><br>
+                <span class="red">(Ooh, ooh)</span><br>
+                <span class="blue">Oh, lost, lost in the words that we scream</span><br>
+                <span class="red">I don't even wanna do this anymore</span><br>
+                <span class="blue">'Cause you already know what you mean to me</span><br>
+                <span class="red">And our love's the only war worth fighting for</span><br>
+                <span class="blue">Wherever you go, that's where I'll follow</span><br>
+                <span class="red">Nobody's promised tomorrow</span><br>
+                <span class="blue">So I'ma love you every night like it's the last night</span><br>
+                <span class="red">Like it's the last night</span><br>
+                <span class="blue">If the world was ending, I'd wanna be next to you</span><br>
+                <span class="red">If the party was over and our time on Earth was through</span><br>
+                <span class="blue">I'd wanna hold you just for a while and die with a smile</span><br>
+                <span class="red">If the world was ending, I'd wanna be next to you</span><br>
+                <span class="red">Right next to you</span><br>
+                <span class="blue">Next to you</span><br>
+                <span class="red">Right next to you</span><br>
+                <span class="blue">Oh-oh, oh</span><br>
+                <span class="red">If the world was ending, I'd wanna be next to you</span><br>
+                <span class="blue">If the party was over and our time on Earth was through</span><br>
+                <span class="red">I'd wanna hold you just for a while and die with a smile</span><br>
+                <span class="blue">If the world was ending, I'd wanna be next to you</span><br>
+                <span class="red">If the world was ending, I'd wanna be next to you</span><br>
+                <span class="red">(Ooh, ooh)</span><br>
+                <span class="blue">I'd wanna be next to you</span>
+            </p>
         </section>
 
         <section class="video-link">
